fixing link spacing

--- a/main.css
+++ b/main.css
@@ -36,6 +36,9 @@ main {
   margin: 1.5rem 0 0 0;
   padding: 0;
 }
+.contact ul a {
+  margin: 0 5px;
+}
 .wiggle {
   border-bottom: 1px solid #3F3E2E;
   display: inline-block;
